# agent-gate

./: .dockerignore  .env.example  .gitignore  AgentGate Technical Foundation Document.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: dependencies.py
app/api/v1/: approvals.py  audits.py  benchmark.py  chat.py  scenarios.py
app/config/: logging.py  settings.py
app/database/: base.py  session.py
app/database/migrations/: env.py
app/domains/connector/: base.py
deployment/docker/: Dockerfile
docs/decisions/: 0001-architecture-foundation.md
tests/: test_health.py
